# Macolint

./: .gitignore  Cargo.toml  README.md  SETUP_EMAIL_LOOKUP.md  SHARE.md  commands.md  create_user_lookup_function.py  fix_rls_policy.py  fix_rls_policy.sql  fix_teams_policy_simple.sql  get_user_by_email_function.sql  install.sh  requirements.txt  setup.py  supabase_teams_migration.sql  uninstall.sh  update_teams_policy.sql
aur/: .SRCINFO  PKGBUILD
macolint/: __init__.py  auth.py  cli.py  config.py  crypto.py  database.py  interactive.py  models.py  sharing.py  storage.py  supabase_client.py  sync.py  teams.py
macolint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plans/: plan_0.md
scoop/: macolint.json
scripts/: create-github-release.sh  create-release.sh  install.sh  setup-homebrew-tap.sh  update-formula-sha256.sh
scripts/shell-integration/: bash.sh  fish.fish  zsh.zsh
shell-wrappers/: bash.sh  fish.fish  zsh.sh
src/: config.rs  main.rs
src/commands/: get.rs  list.rs  mod.rs  save.rs
src/search/: fuzzy.rs  mod.rs
src/storage/: database.rs  encryption.rs  mod.rs
tests/: integration_test.rs
winget/macolint/: macolint.locale.en-US.yaml  macolint.yaml
