[package]
name = "macolint"
version = "0.1.0"
edition = "2021"
description = "A terminal-first snippet manager with encrypted local storage"
authors = ["Macolint Team"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
clipboard = "0.5"
fuzzy-matcher = "0.3"
dirs = "5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = { version = "0.21", features = ["default"] }

[[bin]]
name = "snip"
path = "src/main.rs"

